Working version with 'unspilt' using shift+click (e.stopPropagation was the secret sauce)

--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-body{background-color: aquamarine;}
+
+
+*{margin:0px;padding:0px;box-sizing:border-box}
+body{background-color: #66ff0052 }   
+.full{width:100vw;height:100vh;} 
+.quarter{width:50%;height:50%;background-color:blue;border:1px solid white}
+.flexy{display:flex;flex-wrap:wrap}
